--- a/style.css/style.css
+++ b/style.css/style.css
@@ -1,23 +1,43 @@
 body {
   font-family: "Poppins", sans-serif;
-  text-align: center;
 }
-
+header {
+  text-align: center;
+  margin: 80px;
+}
 h1 {
   color: rgb(0, 0, 0);
-
-  font-weight: 600;
-  font-style: italic;
+  font-weight: 500;
+  font-size: 95px;
+  color: #490773;
 }
-p {
+header h2 {
+    font-size: 30px;
+    font-weight: 300;
+    margin: 20px auto;
+    color: #490773;
+}
+header p {
   font-weight: 300;
   font-style: normal;
+  color: #490773;
+  font-size: 40px;
+  margin: 10px auto;
+  letter-spacing: 2px;
 }
 .separator {
   height: 2px;
   width: 80%;
   background-color: rgba(0, 0, 0, 0.683);
-  margin: 20px auto; 
+  margin: 30px auto;
   border-radius: 2px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+.btn-branding {
+    background: #6750A4;
+    color: white;
+    border-radius: 4px;
+    padding: 12px;
+    margin: 10px 10px;
+    
 }
