--- a/style.css/style.css
+++ b/style.css/style.css
@@ -1,7 +1,7 @@
-:root{
-    --primary-color:#490773;
-    --secondary-color:#6750A4;
-    --white:white;
+:root {
+  --primary-color: #490773;
+  --secondary-color: #6750a4;
+  --white: white;
 }
 
 body {
@@ -11,28 +11,31 @@ header {
   text-align: center;
   margin: 80px;
 }
-header h1, h2, p {
-color: var(--primary-color);
+header h1,
+h2,
+p {
+  color: var(--primary-color);
 }
 header h1 {
-  
   font-weight: 500;
   font-size: 95px;
-  
 }
 header h2 {
   font-size: 30px;
   font-weight: 300;
   margin: 20px auto;
-  
 }
 header p {
   font-weight: 300;
   font-style: normal;
-  ;
   font-size: 40px;
   margin: 10px auto;
   letter-spacing: 2px;
+}
+main p {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.5;
 }
 .separator {
   height: 2px;
@@ -43,8 +46,16 @@ header p {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 .btn-branding {
-  background:var(--secondary-color);
+  background: var(--secondary-color);
   color: var(--white);
+  border-radius: 4px;
+  padding: 12px;
+  margin: 10px 10px;
+}
+.btn-branding-outline {
+  background: var(--secondary-color);
+  color: var(--white);
+  border: 1px solid var(--primary-color);
   border-radius: 4px;
   padding: 12px;
   margin: 10px 10px;
