--- a/style.css/style.css
+++ b/style.css/style.css
@@ -35,7 +35,7 @@ header p {
 main p {
     font-weight: normal;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 30px;
 }
 .separator {
   height: 2px;
