--- a/style.css/style.css
+++ b/style.css/style.css
@@ -33,9 +33,9 @@ header p {
   letter-spacing: 2px;
 }
 main p {
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 30px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .separator {
   height: 2px;
@@ -59,4 +59,43 @@ main p {
   border-radius: 4px;
   padding: 12px;
   margin: 10px 10px;
+}
+.project-description {
+  padding: 100px 60px;
+  text-align: center;
+}
+
+.project-description p,
+.project-description h2,
+.project-description a {
+  text-align: center;
+}
+img.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 1200px) {
+  .project-description {
+    padding: 60px 30px;
+  }
+}
+
+@media (max-width: 960px) {
+  .project-description {
+    padding: 30px 20px;
+    text-align: center;
+  }
+  .row img {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .project-description {
+    padding: 40px 20px;
+  }
+  img.img-fluid {
+    display: none;
+  }
 }
