--- a/style.css/style.css
+++ b/style.css/style.css
@@ -2,6 +2,7 @@
   --primary-color: #490773;
   --secondary-color: #6750a4;
   --white: white;
+  --colour:rgba(0, 0, 0, 0.683);
 }
 
 body {
@@ -37,10 +38,17 @@ main p {
   font-size: 16px;
   line-height: 30px;
 }
+footer {
+    font-size: 15px;
+  font-weight: 300;
+  margin: 20px auto;
+  text-align: center;
+  color: var(--colour)
+}
 .separator {
   height: 2px;
   width: 80%;
-  background-color: rgba(0, 0, 0, 0.683);
+  background-color: var(--colour);
   margin: 30px auto;
   border-radius: 2px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
