--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
   --primary-color: #490773;
   --secondary-color: #6750a4;
   --white: white;
-  --colour:rgba(0, 0, 0, 0.683);
+  --colour: rgba(0, 0, 0, 0.683);
 }
 
 body {
@@ -39,24 +39,62 @@ main p {
   line-height: 30px;
 }
 footer {
-    font-size: 15px;
+  font-size: 15px;
   font-weight: 300;
   margin: 20px auto;
   text-align: center;
-  color: var(--colour)
+  color: var(--colour);
 }
+.about-section {
+  text-align: center;
+}
+.about-section h1 {
+  font-size: 75px;
+  text-align: center;
+}
+.about-image {
+  width: 80%;
+  max-width: 800px;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+}
+.about-heading {
+  text-align: center;
+}
+.about-paragraph {
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.6;
+  margin: 10px auto;
+}
+.icons-container {
+  text-align: center;
+  margin: 20px auto;
+}
+.social-icons a {
+  font-size: 36px;
+  color:  rgb(62, 62, 62);
+  margin: 0 20px;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+.social-icons a:hover {
+  color: var(--secondary-color);
+}
+
 .custom-navbar {
   background-color: #6750a4;
 }
 
 .custom-navbar .navbar-brand,
 .custom-navbar .nav-link {
-  color: var(--white) !important; 
+  color: var(--white) !important;
 }
 
 .custom-navbar .navbar-brand:hover,
 .custom-navbar .nav-link:hover {
-  color: #ddd !important; 
+  color: #ddd !important;
 }
 .separator {
   height: 2px;
