--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,9 @@ main p {
   font-size: 16px;
   line-height: 30px;
 }
+main h3 {
+  color: var(--primary-color);
+}
 footer {
   font-size: 15px;
   font-weight: 300;
@@ -45,10 +48,10 @@ footer {
   text-align: center;
   color: var(--colour);
 }
-.about-section {
+.header-section {
   text-align: center;
 }
-.about-section h1 {
+.header-section h1 {
   font-size: 75px;
   text-align: center;
 }
@@ -82,6 +85,7 @@ footer {
 .social-icons a:hover {
   color: var(--secondary-color);
 }
+
 .portfolio-title {
   font-size: 80px;
   text-align: center;
@@ -90,6 +94,7 @@ footer {
   margin: 20px;
   padding: 20px;
 }
+
 .custom-navbar {
   background-color: #6750a4;
 }
